# stellar-squares

./: .env.staging  .gitignore  Cargo.toml  LICENSE  README.md  environments.toml  eslint.config.js  index.html  package-lock.json  package.json  vercel.json
.github/workflows/: build.yml  deploy.yml  preview.yml  reusable-build.yml
contracts/nft-sequential-minting/: Cargo.toml
contracts/nft-sequential-minting/src/: contract.rs  test.rs
contracts/squares-gallery/: Cargo.toml
contracts/squares-gallery/fixtures/: nft_sequential_minting_example.wasm
contracts/squares-gallery/src/: contract.rs  lib.rs  nft.rs  test.rs
scripts/: mainnet.sh  testnet.sh
src/: App.module.css  App.tsx  index.css  main.tsx  service.ts
src/components/: ArtCard.tsx
src/components/styles/: ArtCard.module.css
src/contracts/: util.ts
src/hooks/: useNftCollection.ts
src/pages/: Home.module.css  Home.tsx  v2.module.css  v2.tsx
